--- a/gear2024/index.html
+++ b/gear2024/index.html
@@ -8,6 +8,9 @@
     </head>
 
     <body>
+        <div id="opening">
+            <video id="openingvideo" muted></video>
+        </div>
         <div id="videoBox">
             <video id="drawVideo"></video>
         </div>
@@ -78,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="innerBox2">
-                                <p class="prizeName">Logitech G G515 TKL 有線鍵盤 黑 x2</p>
+                                <p class="prizeName">Logitech G G515 有線鍵盤 TKL 黑 x2</p>
                                 <div><a href="https://store.logitech.tw/products/logitech-g-g515-%E8%BC%95%E8%96%84%E6%9C%89%E7%B7%9A%E6%A9%9F%E6%A2%B0%E5%BC%8F-tkl-%E9%9B%BB%E7%AB%B6%E9%8D%B5%E7%9B%A4?srsltid=AfmBOooeYDVaDkbQe19mV25UdxeIofb0oX-YvAuB1t7ra95lM9pWJ-Um" target="_blank">
                                     <img class="prizeImg" id="imgP6">
                                 </a>
