--- a/gear2024/innnn.html
+++ b/gear2024/innnn.html
@@ -6,7 +6,13 @@
 </head>
 <body>
     <div  style="width: 80%; height:100vh; background-color: aqua; overflow: hidden; margin: auto;">
-        <img src="image/padoru.png" style="margin-top: 50%; position: relative;"></img>
+        <video  loop autoplay muted="true">
+            <source src="image/opening.mp4" type="video/mp4">
+        </video>
+
+        <audio autoplay controls>
+            <source src="image/opmp3.mp3">
+        </audio>
 
     </div>
     
