--- a/gear2024/index.html
+++ b/gear2024/index.html
@@ -8,8 +8,11 @@
     </head>
 
     <body>
+        <div id="enter">
+            <img id="enterimg" src="image/stable.png">
+        </div>
         <div id="opening">
-            <video id="openingvideo" muted></video>
+            <video id="openingvideo" ></video>
         </div>
         <div id="videoBox">
             <video id="drawVideo"></video>
